--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,6 +125,7 @@ h2{font-size: 1.5em;}
   max-width: calc(80% - 0px);
   width: 1320px;
   margin: 0 auto;
+  padding: 0;
 }
 .used-source {
   text-align: left;
